<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Wi-Fi Switch App Widget</string>

    <string name="title_settings">Settings</string>
    <string name="title_settings_color">Color settings</string>
    <string name="copyright">(c) toastkidjp</string>
    <string name="close">Close</string>
    <string name="title_licenses">License information</string>

    <string name="settings_color_background_title">Background</string>
    <string name="settings_color_font_title">Text</string>
    <string name="settings_color_preview_title">Preview</string>
    <string name="title_clear">Clear all settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="confirm_clear_all_settings"><![CDATA[<font color="red">It can\'t cancel this operation.</font>]]></string>
    <string name="done_clear">It has been done!</string>
    <string name="title_enable_suggest">Use search input suggestion</string>
    <string name="settings_color_prev">Clear</string>
    <string name="settings_color_commit">Commit</string>
    <string name="settings_color_done_commit">It has been commit new color settings.</string>
    <string name="settings_color_done_reset">It has been reset color settings.</string>
    <string name="settings_color_delete">It has been deleted color.</string>
    <string name="title_app_version">This app version</string>
    
    <string name="production_app_admob_id">ca-app-pub-5751262573448755~6482404222</string>
    <string name="production_banner_unit_id">ca-app-pub-5751262573448755/7959137422</string>
    <string name="production_interstitial_unit_id">ca-app-pub-5751262573448755/3133057826</string>
    <string name="title_advertisement_1">A</string>
    <string name="title_advertisement_2">D</string>
    <string name="settings_color_saved_title">Saved colors</string>
    <string name="title_clear_saved_color">Clear saved color</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="title_wireless_settings">Wireless Settings</string>
    <string name="title_device_settings">Device Settings</string>
    <string name="title_wifi_settings">Wi-Fi Settings</string>
    <string name="title_wifi_ip_settings">Wi-Fi IP Settings</string>
    <string name="title_wifi_state">Wi-Fi State Settings</string>
    <string name="message_failed_ad_loading">It failed to load AD...</string>
    <string name="thank_you_for_using">Thank you for using!</string>
    <string name="message_please_view_ad">Please could you bear to see interstitial AD...</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="link_privacy_policy">https://tmblr.co/ZDG7Be2NVdctY</string>

</resources>
