<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/settings_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgray_scale"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:minHeight="?android:actionBarSize"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <FrameLayout
                android:id="@+id/settings_wifi_switch"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:paddingStart="@dimen/settings_item_left_margin"
                android:paddingEnd="@dimen/settings_item_left_margin"
                android:background="@drawable/ripple_soft"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_gravity="start"
                    android:text="@string/title_wifi_state"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/wifi_black"
                    />
                <TextView
                    android:id="@+id/wifi_state"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:text="@string/on"
                    android:textSize="16sp"
                    />
            </FrameLayout>

            <include layout="@layout/primary_dark_divider" />

            <LinearLayout
                android:id="@+id/settings_color"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:background="@drawable/ripple_soft"
                >
                <TextView
                    android:id="@+id/settings_color_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/title_settings_color"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/ic_palette"
                    />
            </LinearLayout>

            <include layout="@layout/primary_dark_divider" />

            <TextView
                android:id="@+id/settings_wifi_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:drawableLeft="@drawable/wifi_black"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:text="@string/title_wifi_settings"
                android:textSize="16sp"
                android:background="@drawable/ripple_soft"
                />

            <include layout="@layout/primary_dark_divider" />

            <TextView
                android:id="@+id/settings_wifi_ip"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:drawableLeft="@drawable/ic_wifi_ip"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:text="@string/title_wifi_ip_settings"
                android:textSize="16sp"
                android:background="@drawable/ripple_soft"
                />

            <include layout="@layout/primary_dark_divider" />

            <TextView
                android:id="@+id/settings_device"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:drawableLeft="@drawable/ic_device"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:text="@string/title_device_settings"
                android:textSize="16sp"
                android:background="@drawable/ripple_soft"
                />

            <include layout="@layout/primary_dark_divider" />

            <TextView
                android:id="@+id/settings_wireless"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:drawableLeft="@drawable/ic_wireless"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:text="@string/title_wireless_settings"
                android:textSize="16sp"
                android:background="@drawable/ripple_soft"
                />

            <include layout="@layout/primary_dark_divider" />

            <TextView
                android:id="@+id/settings_clear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:drawableLeft="@drawable/ic_close_black"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:text="@string/title_clear"
                android:textSize="16sp"
                android:background="@drawable/ripple_soft"
                />

            <include layout="@layout/primary_dark_divider"
                android:layout_width="match_parent" android:layout_height="3dp" />

            <TextView
                android:id="@+id/settings_licenses"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:drawableLeft="@drawable/ic_license"
                android:gravity="center_vertical"
                android:text="@string/title_licenses"
                android:textSize="16sp"
                android:background="@drawable/ripple_soft"
                />

            <include layout="@layout/primary_dark_divider" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:background="@drawable/ripple_soft"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/settings_item_left_margin"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/title_app_version"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/settings_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/settings_item_left_margin"
                    android:layout_gravity="center_vertical|right"
                    android:textSize="16sp"
                    />
            </FrameLayout>

            <include layout="@layout/primary_dark_divider" />

            <TextView
                android:id="@+id/settings_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:drawableLeft="@drawable/ic_privacy"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/settings_item_left_margin"
                android:text="@string/title_privacy_policy"
                android:textSize="16sp"
                android:background="@drawable/ripple_soft"
                />

            <include layout="@layout/primary_dark_divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/soft_background"
                android:text="@string/copyright"
                />

            <include layout="@layout/primary_dark_divider" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>